Set compiler args for idea