@@ -20,6 +20,7 @@ buildscript {
 
 plugins {
     id "org.jetbrains.intellij" version "0.4.13" apply false
+    id 'org.jetbrains.gradle.plugin.idea-ext' version "0.9"
 }
 
 apply plugin: 'com.palantir.git-version'
@@ -63,5 +64,13 @@ subprojects {
     // generated code that we have checked into the repo.
     tasks.withType(Test) {
         systemProperty 'recreate', System.getProperty('recreate', 'false')
+    }
+}
+
+idea.project.settings {
+    compiler {
+        javac {
+            moduleJavacAdditionalOptions = ['palantir-java-format': '--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED']
+        }
     }
 }
